--- a/src/component/header.css
+++ b/src/component/header.css
@@ -7,6 +7,7 @@
 }
 
 .body-main{
+    
     background-color: black;
 }
 .header img{
@@ -46,7 +47,13 @@ height: 92px;
     font-weight: 600;
     text-decoration: none;
     margin-right: 10px;
+    border: 2px solid red;
+    list-style-type: none;
     
+}
+
+.services-box{
+    display: flexbox
 }
 
 
@@ -74,14 +81,14 @@ height: 92px;
 .navmenu ul li {
     position: relative;
     cursor: pointer;
-    transition: color 0.3s ease-in-out;
+    
 }
-/* Hover Effect - Color Change */
+
 .navmenu ul li:hover {
     color: red;
 }
 
-/* Underline Animation */
+
 .navmenu ul li::after {
     content: "";
     position: absolute;
@@ -93,10 +100,34 @@ height: 92px;
     transition: width 0.3s ease-in-out;
 }
 
-/* Expand Underline on Hover */
+
 .navmenu ul li:hover::after {
     width: 100%;
 }
+
+
+.navmenu-latest{
+    height: 45px;
+    width: 1000px;
+    margin-right: -500px;
+}
+
+.menu1{
+    color: #FFFFFF !important;
+    font-size: 24px ;
+    gap: 20px;
+    text-decoration: none;
+}
+.navmenu-latest ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+
+/* services drop down end */
+
 
 
 /* Make the offcanvas background transparent */
@@ -410,3 +441,15 @@ position: relative;
     height: 800px;
 }
 
+.navmenu-box{
+    border: 2px solid red;
+    height: 60px;
+    width: 800px;
+}
+
+.navmenu-2{
+    border: 2px solid blue;
+    height: 60px;
+    width: 100px;
+    color: #FFFFFF;
+}
