--- a/src/component/developmentprocess.css
+++ b/src/component/developmentprocess.css
@@ -82,7 +82,7 @@
 }
 
 .dp-header2{
-    width: 580px;
+    width: 100%;
 height: 123px;
 /* border: 2px solid yellow; */
 font-family: Raleway;
@@ -91,6 +91,7 @@ font-weight: 700;
 line-height: 52.83px;
 text-align: left;
 text-decoration-skip-ink: none;
+
 
 }
 
