--- a/src/component/style.css
+++ b/src/component/style.css
@@ -3,6 +3,7 @@
 
 body {
   font-family: 'Plus Jakarta Sans', sans-serif;
+  
 }
 
 
@@ -11,11 +12,13 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
 }
 
 .featuredservices-box{
     width: screen;
     margin-top: 50px;
+    
    
 }
 
@@ -118,9 +121,9 @@ font-weight: 600;
     font-family: Raleway, sans-serif;
     font-size: 45px;
     font-weight: 700;
-    color: #303030;
     transition: color 0.3s ease-in-out;
     line-height: 1.3;
+    
 }
 
 .featuredservices-header-text1 li {
@@ -139,6 +142,14 @@ font-weight: 600;
         font-size: 30px;
     font-weight: 600;
     line-height: 10px;
+    
+    }
+}
+
+@media (max-width: 820px) {
+    .featuredservices-header-text1 li{
+        width: 350px;
+        
     }
 }
 
@@ -187,14 +198,21 @@ font-weight: 600;
     }
 }
 
-@media (max-width: 660px) {
+@media (max-width: 600px) {
     .featuredservices-header-menu {
-        
+        width: 500px;
     }
 }
-@media (max-width: 400px) {
+@media (max-width: 500px) {
     .featuredservices-header-menu {
         margin-top: 20px;
+        width: 400px;
+    }
+}
+
+@media (max-width: 400px) {
+    .featuredservices-header-menu {
+        width: 390px;
     }
 }
 
@@ -413,7 +431,9 @@ color: #303030;
         font-size: 30px;
     font-weight: 600;
     margin-left: 200px;
-        
+    
+        width: 200px;
+        margin-right: 800px;
     }
 }
 
@@ -422,6 +442,18 @@ color: #303030;
         font-size: 30px;
     font-weight: 600;
  
+        
+    }
+}
+
+
+@media (max-width: 500px) {
+    .featuredservices-header-text1 {
+        font-size: 25px;
+    font-weight: 600;
+    width: 400px;
+    margin-right: 900px;
+
         
     }
 }
@@ -438,6 +470,13 @@ color: #303030;
 @media (max-width: 390px) {
     .featuredservices-header-text1 {
        margin-left: 215px;
+    }
+}
+
+
+@media (max-width: 430px){
+    .featuredservices-header-text ul{
+        width: 350px;
     }
 }
 
@@ -485,15 +524,16 @@ color: #303030;
 @media (max-width: 1060px) {
     .custom-button {
         margin-top: 100px;
-        margin-left: -1800px;
-        margin-right: 50px;
+        margin-left: -1700px !important;
+        margin-right: 500px;
        
 }
 }
 
 @media (max-width: 390px) {
     .custom-button {
-        margin-left: -800px;
+        margin-left: -1700px !important;
+        
 }
 }
 
