--- a/src/component/clients.css
+++ b/src/component/clients.css
@@ -39,9 +39,10 @@
 }
 
 .clients-list{
-    width: screen;
+    width: 70%;
     height: 100px;
     flex-wrap: wrap;
+    border: 2px solid red;
 }
 
 .clients-list ul{
