--- a/src/component/style.css
+++ b/src/component/style.css
@@ -120,16 +120,18 @@ font-weight: 600;
 .featuredservices-header-text1 {
     font-family: Raleway, sans-serif;
     font-size: 45px;
-    font-weight: 700;
+    font-weight: 900;
     transition: color 0.3s ease-in-out;
-    line-height: 1.3;
+    line-height: 1.2;
+    color:"#303030";
+
     
 }
 
 .featuredservices-header-text1 li {
     font-family: Raleway, sans-serif;
     font-size: 45px;
-    font-weight: 700;
+    font-weight: 800;
     color: #303030;
     transition: color 0.3s ease-in-out;
     width: 600px;
