--- a/src/component/chooseus.css
+++ b/src/component/chooseus.css
@@ -568,8 +568,12 @@ border-width: 3px;
 /* margin: 0 auto; */
 background-color:#f8f8f8 ;
  display: flex;
+
+ display: flex;
+ justify-content: center;
  
 }
+
 
 @media (max-width:570px){
     .choose-body{
@@ -611,13 +615,17 @@ margin-top: 50px;
     width: 550px;
     margin-top: 50px;
     margin: 0 auto;
-    margin-left: 350px;
+    
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     opacity: 1;
     animation: fadeIn 1s ease-in-out;
     
+    transform: translateX(160px);
+    margin-right: 150px;
+    
+
    
 }
 
@@ -628,6 +636,7 @@ margin-top: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
+        transform: translateX(0px);
     }
 }
 
@@ -745,7 +754,7 @@ opacity: 0px;
 .whychoosebanner{
     margin-left: 50px;
     height: 700px;
-    width: 1000px;
+    width: 50%;
     display: inline-flex;
     justify-content: center;
     
@@ -770,7 +779,8 @@ opacity: 0px;
 .whychoosebanner img{
     
     height: 100%;
-    margin: auto;
+    
+    object-fit: cover !important;
 }
 
 @media (max-width:1880px){
