--- a/src/component/Homepage/header.css
+++ b/src/component/Homepage/header.css
@@ -9,6 +9,8 @@
 .body-main{
     
     background-color: black;
+    width: 10/12;
+   
 }
 
 .mySwiper{
@@ -31,12 +33,15 @@
     padding: 25px 5%;
     z-index: 10; /* Ensure it stays above the slides */
     
-    
 }
 
 
 .navbar {
     transition: background-color 0.3s ease-in-out;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .navbar.scrolled {
