--- a/src/component/Homepage/header.css
+++ b/src/component/Homepage/header.css
@@ -19,18 +19,52 @@
 .logo1{
     width: 180px;
     height: 60px;
-    margin-top: -20px;
+    margin-top: -10px;
+    margin-left: 290px;
+        
 }
+
+
+@media (max-width:1800px){
+    .logo1{
+        margin-left: 260px;
+    }
+}
+@media (max-width:1750px){
+    .logo1{
+        margin-left: 230px;
+    }
+}
+@media (max-width:1700px){
+    .logo1{
+        margin-left: 210px;
+    }
+}
+@media (max-width:1650px){
+    .logo1{
+        margin-left: 180px;
+    }
+}
+@media (max-width:1600px){
+    .logo1{
+        margin-left: 170px;
+    }
+}
+@media (max-width:1550px){
+    .logo1{
+        margin-left: 140px;
+    }
+}
+
 
 .navbar {
     position: fixed; /* Keep navbar fixed over slides */
     width: 100%; /* Ensure full width */
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* border: 2px solid red; */
     padding: 25px 5%;
     z-index: 10; /* Ensure it stays above the slides */
-    
     
 }
 
@@ -111,22 +145,42 @@
 
 .navmenu-latest{
     height: 45px;
-    width: 70%;
-    margin-right: -700px; 
+    width: 55%;
+    margin-right: 140px; 
+    /* border: 2px solid green; */
 }
 
 @media (max-width:1750px){
     .navmenu-latest{
-        margin-right: -500px;
+        width: 48%;
+        margin-right: 150px;
+    }
+}
+@media (max-width:1680px){
+    .navmenu-latest{
+        width: 53%;
+        margin-right: 120px;
+    }
+}
+@media (max-width:1680px){
+    .navmenu-latest{
+        width: 55%;
+        margin-right: 120px;
+    }
+}
+@media (max-width:1550px){
+    .navmenu-latest{
+        width: 55%;
+        margin-right: 85px;
     }
 }
 
-@media (max-width:1630px){
+/* @media (max-width:1630px){
     .navmenu-latest{
         margin-right: -300px;
         width: 80%;
     }
-}
+} */
 
 .menu1{
     color: #FFFFFF !important;
@@ -149,8 +203,30 @@
     transition: color 0.3s ease-in-out;
     
 }
+@media (max-width:1750px){
+    .navmenu-latest ul li{
+       font-size: 14px;
+    }
+}
 
 
+@media (max-width:1680px){
+    .navmenu-latest ul li{
+       font-size: 14px;
+    }
+}
+
+
+@media (max-width:1600px){
+    .navmenu-latest ul li{
+       font-size: 14px;
+    }
+}
+@media (max-width:1550px){
+    .navmenu-latest ul li{
+       font-size: 14px;
+    }
+}
 
 .navmenu-latest ul li:hover {
     color: rgb(255, 0, 0);
