--- a/src/component/Homepage/header.css
+++ b/src/component/Homepage/header.css
@@ -4,16 +4,52 @@
 * {
     margin: 0;
     padding: 0;
+   
+}
+
+
+
+@media (max-width:420px){
+    body{
+        margin-right: -8px ;
+    }
 }
 
 .body-main{
+    margin-top: -0.5rem;
+    background-color: rgb(0, 0, 0);
     
-    background-color: black;
+}
+@media (max-width:740px){
+    .body-main{
+        margin-top: 2rem;
+    }
+}
+
+
+
+@media (max-width:780px){
+    .mySwiper{
+        height: 780px !important;
+    }
+}
+@media (max-width:550px){
+    .mySwiper{
+        height: 800px !important;
+
+    }
+}
+@media (max-width:420px){
+    .mySwiper{
+        height: 800px !important;
+
+    }
 }
 
 .mySwiper{
     width: screen;
     height: 500px;
+    
 }
 
 .logo1{
@@ -21,6 +57,7 @@
     height: 60px;
     margin-top: -10px;
     margin-left: 290px;
+    
         
 }
 
@@ -55,6 +92,69 @@
         margin-left: 140px;
     }
 }
+@media (max-width:970px){
+    .logo1{
+        margin-left: 240px;
+    }
+}
+@media (max-width:900px){
+    .logo1{
+        margin-left: 210px;
+    }
+}
+@media (max-width:850px){
+    .logo1{
+        margin-left: 180px;
+    }
+}
+@media (max-width:800px){
+    .logo1{
+        margin-left: 160px;
+    }
+}
+@media (max-width:750px){
+    .logo1{
+        margin-left: 140px;
+    }
+}
+@media (max-width:700px){
+    .logo1{
+        margin-left: 120px;
+    }
+}
+@media (max-width:650px){
+    .logo1{
+        margin-left: 100px;
+    }
+}
+@media (max-width:600px){
+    .logo1{
+        margin-left: 80px;
+    }
+}
+@media (max-width:550px){
+    .logo1{
+        margin-left: 60px;
+    }
+}
+@media (max-width:500px){
+    .logo1{
+        margin-left: 30px;
+    }
+}
+@media (max-width:450px){
+    .logo1{
+        margin-left: 20px;
+    }
+}
+@media (max-width:400px){
+    .logo1{
+        margin-left: 0px;
+    }
+}
+
+
+
 
 
 .navbar {
@@ -67,12 +167,19 @@
     
 }
 
+@media (max-width:420px){
+    .navbar{
+        
+    }
+}
+
 
 .navbar {
     transition: background-color 0.3s ease-in-out;
 }
 
 .navbar.scrolled {
+    margin-top: -40px;
     background-color: rgba(0, 0, 0, 0.432);
     height: 80px;
     
@@ -193,6 +300,10 @@
     color:#FFFFFF;
     
 }
+.navmenu-latest ul li a{
+    text-decoration: none;
+    color:#FFFFFF;
+}
 
 .navmenu-latest ul li{
     display: inline-block;
@@ -200,7 +311,6 @@
     padding-inline: 20px;
     position: relative;
     transition: color 0.3s ease-in-out;
-    
 }
 @media (max-width:1750px){
     .navmenu-latest ul li{
@@ -478,12 +588,14 @@
 }
 
 
+
 .banner-slider1-content{
     width: 614px;
     height: 434px;
     margin-top: 200px;
     margin-left: 150px;
     position: relative;
+
 }
 
 @media (max-width:1200px){
@@ -701,6 +813,7 @@ position: relative;
 
 .mySwiper{
     height: 800px;
+   
 }
 
 .navmenu-box{
@@ -709,7 +822,7 @@ position: relative;
 }
 
 .navmenu-2{
-    border: 2px solid blue;
+    
     height: 60px;
     width: 100px;
     color: #FFFFFF;
