--- a/src/component/Homepage/testimonials.css
+++ b/src/component/Homepage/testimonials.css
@@ -575,6 +575,18 @@ color: #303030;
     transform: translate(-180px);
   }
 
+@media (max-width: 680px) {
+    .swiper-pagination{
+        transform: translate(-150px);
+}}
+@media (max-width: 530px) {
+    .swiper-pagination{
+        transform: translate(-120px, 40px);
+}}
+@media (max-width: 530px) {
+    .swiper-pagination{
+        transform: translate(-100px, 40px);
+}}
 
 
 
